<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.austinfay.beenthere.PlaceEditActivity">


        <fragment
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/map_preview_place_view"
            android:name="com.google.android.gms.maps.MapFragment" />

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:id="@+id/scrollView">

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#ffffff"
            android:id="@+id/info_table_layout_place_view">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#ffc4bdbc"
                android:id="@+id/name_table_row_place_view">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/save_location_textview_name"
                    android:id="@+id/name_edittext_place_view"
                    android:textSize="18pt"
                    android:textColor="#ffffff" />

            </TableRow>


            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#ffc4bdbc"
                android:id="@+id/address_table_row_place_view">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:textSize="9pt"
                    android:textColor="#ffffff"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/save_location_textview_address"
                    android:id="@+id/address_edittext_place_view"/>

                <ProgressBar
                    style="?android:attr/progressBarStyleInverse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/progressBar_place_view"
                    android:layout_column="0" />

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#ffc4bdbc">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/save_location_textview_latitude" />

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="10pt"
                    android:ems="10"
                    android:id="@+id/latitude_textview_place_view"
                    android:textColor="#ff000000" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#ffc4bdbc">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/save_location_textview_longitude" />

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="10pt"
                    android:ems="10"
                    android:id="@+id/longitude_textview_place_view"
                    android:textColor="#ff000000" />
            </TableRow>
        </TableLayout>

</ScrollView>


</FrameLayout>

